fix(template-v2): new extra section padding issue fix + z-index fix (#918)

--- a/express/blocks/template-list/template-list.css
+++ b/express/blocks/template-list/template-list.css
@@ -1,4 +1,5 @@
-main .template-list-horizontal-fullwidth-container {
+main .template-list-horizontal-fullwidth-container,
+main .template-list-fullwidth-apipowered-container {
   padding-top: 0;
 }
 
